--- a/tonic/Cargo.toml
+++ b/tonic/Cargo.toml
@@ -56,6 +56,7 @@ bytes = "1.0"
 futures-core = {version = "0.3", default-features = false}
 futures-util = {version = "0.3", default-features = false}
 http = "0.2"
+metrics = "0.20"
 tracing = "0.1"
 
 async-stream = "0.3"
